# libhildondesktop

./: .gitignore  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
debian/: changelog  control  libhildondesktop1-dev.install  libhildondesktop1-examples.install  libhildondesktop1.install  rules
doc/: Makefile.am  libhildondesktop-docs.xml  libhildondesktop-sections.txt  libhildondesktop.types
examples/: Makefile.am
examples/home/: Makefile.am  example-label-applet.desktop  example-label-home-applet.c  example-label-home-applet.h
examples/notification/: Makefile.am  example-notification-plugin.c  example-notification-plugin.h  example-notification.desktop
examples/pvr-texture/: Makefile.am  example-pvr-texture.c
examples/status-menu/: Makefile.am  example-battery-status-area-item.c  example-battery-status-area-item.h  example-battery.desktop  example-button-status-menu-item.c  example-button-status-menu-item.h  example-button.desktop  example-clock-status-menu-item.c  example-clock-status-menu-item.h  example-clock.desktop  example-icon-status-menu-item.c  example-icon-status-menu-item.h  example-icon.desktop  example-plugin.c  example-plugin.desktop  example-plugin.h  example-signal-status-area-item.c  example-signal-status-area-item.h  example-signal.desktop  example-volume-status-menu-item.c  example-volume-status-menu-item.h  example-volume.desktop
libhildondesktop/: Makefile.am  hd-config-file.c  hd-config-file.h  hd-config.h  hd-heartbeat.c  hd-heartbeat.h  hd-home-plugin-item.c  hd-home-plugin-item.h  hd-notification-plugin.c  hd-notification-plugin.h  hd-notification.c  hd-notification.h  hd-plugin-configuration.c  hd-plugin-configuration.h  hd-plugin-item.c  hd-plugin-item.h  hd-plugin-loader-default.c  hd-plugin-loader-default.h  hd-plugin-loader-factory.c  hd-plugin-loader-factory.h  hd-plugin-loader.c  hd-plugin-loader.h  hd-plugin-manager.c  hd-plugin-manager.h  hd-plugin-module.c  hd-plugin-module.h  hd-pvr-texture.c  hd-pvr-texture.h  hd-shortcuts.c  hd-shortcuts.h  hd-stamp-file.c  hd-stamp-file.h  hd-status-area-item.c  hd-status-area-item.h  hd-status-menu-item.c  hd-status-menu-item.h  hd-status-plugin-item.c  hd-status-plugin-item.h  hd-ui-policy.c  hd-ui-policy.h  (+4 more)
