MAINTAINERCLEANFILES			= Makefile.in

noinst_PROGRAMS   		 	= example-pvr-texture

example_pvr_texture_LDADD		= $(HILDON_LIBS) \
	$(top_builddir)/libhildondesktop/libhildondesktop-@API_VERSION_MAJOR@.la
example_pvr_texture_CFLAGS		= $(HILDON_CFLAGS)
example_pvr_texture_SOURCES		= example-pvr-texture.c
