hildondesktoplib_LTLIBRARIES = example-status-menu-plugin.la

example_status_menu_plugin_la_CPPFLAGS = $(HILDON_CFLAGS) $(DBUS_CFLAGS)
example_status_menu_plugin_la_LDFLAGS = -module -avoid-version
example_status_menu_plugin_la_LIBADD = $(HILDON_CFLAGS) $(DBUS_CFLAGS)
example_status_menu_plugin_la_SOURCES = example-plugin.c example-plugin.h

hildonstatusmenudesktopentry_DATA = example-plugin.desktop
